prevent code from line wrapping

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -166,6 +166,7 @@ pre {
 code {
   border: 1px solid #ccc;
   padding: .125rem .25rem;
+  white-space: nowrap;
 }
 
 pre code {
